<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-Collector</string>
    <string name="action_settings">Settings</string>
    <string name="my_list">MyList</string>
    <string name="site_list">Sites</string>
    <string name="remembered_list">Remembered</string>
    <string name="ignore_list">Ignore List</string>
    <string name="setting">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="title_activity_preference">Setting</string>
    <string name="card_size">Card Size</string>
    <string name="font">Font</string>
    <string name="length">Duration</string>
    <string name="remember_anim">Remember Animation</string>
    <string name="anim">Animation</string>
    <string name="length_title">Duration</string>
    <string name="card_size_title">Card Size</string>
    <string name="font_title">Font</string>
    <string name="display_num">the Number of Display Words</string>
    <string name="display_num_title">the Number of Display Words</string>
    <string name="word_level">Ignore Level</string>
    <string name="word_level_num">Ignore Level</string>

    <string name="about">About This App</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="other_settings">Other</string>
    <string name="author">Author : Mori</string>
    <string name="about_skysemi">About Skysemi</string>

    <string name="do_not_ignore">Don\'t Ignore</string>
    <string name="about_500_words">About 500 Words</string>
    <string name="about_3000_words">About 3000 Words</string>
    <string name="rank_10">10 words</string>
    <string name="rank_30">30 words</string>
    <string name="rank_100">100 words</string>
    <string name="rank_1000">1000 words</string>
    <string name="standard">default</string>
    <string name="short_">short</string>
    <string name="long_">long</string>
    <string name="small">small</string>
    <string name="big">big</string>

    <string name="not_english_error">This is not a English site.</string>
    <string name="words_analyzed">words analyzed</string>
    <string name="from"> </string>
    <string name="tutorial0"> E-Collector\n You can collect English words from web sites, and automatically make your own Word Book.</string>
    <string name="tutorial1">You can collect all words in the site you are looking on your browser by share button.</string>
    <string name="tutorial2">You can also collect words by option of this App.</string>
    <string name="tutorial3">Add words to \'Remembered List\' when you remember them.</string>
    <string name="rank">"位"</string>

    <string name="tutorial_title_0">Welcome</string>
    <string name="tutorial_title_1">From Browser</string>
    <string name="tutorial_title_2">From this App</string>
    <string name="tutorial_title_3">Remembered List</string>
    <string name="next">next</string>
    <string name="finish">finish</string>

    <string name="option_meaning_search">search meaning</string>
    <string name="option_marker">marker</string>
    <string name="option_delete_marker">remove marker</string>
    <string name="option_to_remembered_list">add this word to Remembered list</string>
    <string name="option_to_ignore_list">add this word to ignore list</string>
    <string name="option_cancel">cancel</string>
    <string name="option_to_site">go to this site</string>
    <string name="option_delete_site">delete this site</string>

    <string name="delete_from_remembered_list">Is it OK to remove from \'Remembered List\'?</string>
    <string name="delete_from_ignore_list">Is it OK to remove from \'Ignore List\'?</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="input_url">Add From URL</string>
    <string name="get_from">getting...</string>

    <string name="to_wiki">Go To Wikipedia</string>
    <string name="random_collect">Get Random Site</string>
    <string name="ignore_list_manage">Manage Ignore List</string>

</resources>
